--- a/MyMovieDB/app/src/main/res/navigation/navigation.xml
+++ b/MyMovieDB/app/src/main/res/navigation/navigation.xml
@@ -31,7 +31,9 @@
             app:argType="long" />
         <action
             android:id="@+id/action_detailMovieFragment_to_detailPeopleFragment"
-            app:destination="@id/detailPeopleFragment" />
+            app:destination="@id/detailPeopleFragment"
+            app:launchSingleTop="false"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/detailPeopleFragment"
